--- a/ProyectoApp/templates/ProyectoApp/template/info.html
+++ b/ProyectoApp/templates/ProyectoApp/template/info.html
@@ -174,10 +174,33 @@
 
       <!-- partial -->
       <div class="main-panel">
-        <div class="content-wrapper" style="padding-bottom: 0%; padding-top: 0%; ">
+        <div class="content-wrapper">
           <div class="row">
             <div class="col-sm-12">
               <div class="home-tab">
+                <div class="d-sm-flex align-items-center justify-content-between border-bottom">
+                  <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                      <a class="nav-link active ps-0" id="home-tab" data-bs-toggle="tab" href="#overview" role="tab" aria-controls="overview" aria-selected="true">Resumen</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#audiences" role="tab" aria-selected="false">Stream</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#demographics" role="tab" aria-selected="false">Estadísticas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link border-0" id="more-tab" data-bs-toggle="tab" href="#more" role="tab" aria-selected="false">Información</a>
+                    </li>
+                  </ul>
+                  <div>
+                    <div class="btn-wrapper">
+                      <a href="#" class="btn btn-otline-dark align-items-center"><i class="icon-share"></i> Share</a>
+                      <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i> Print</a>
+                      <a href="#" class="btn btn-primary text-white me-0"><i class="icon-download"></i> Export</a>
+                    </div>
+                  </div>
+                </div>
                 <div class="tab-content tab-content-basic">
                   <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview"> 
                     <div class="row">
@@ -203,7 +226,7 @@
                     </div> 
 
                     <!--Estado de solar Tracker-->
-                    <!--<div class="row">
+                    <div class="row">
                       <blockquote class="blockquote blockquote-primary">
                         <h2>
                           Estado de Solar Tracker:
@@ -212,10 +235,10 @@
                           </small>
                         </h2>
                       </blockquote>
-                    </div>-->
+                    </div>
                     <!--Estado de solar Tracker-->
 
-                    <div class="row" style="padding-top: 1%;">
+                    <div class="row">
                       <div class="col-lg-8 d-flex flex-column">
                         <div class="row flex-grow">
                           <div class="col-12 col-lg-4 col-lg-12 grid-margin stretch-card">
@@ -242,76 +265,15 @@
                           <div class="col-md-6 col-lg-12 grid-margin stretch-card">
                             <div class="card bg-primary card-rounded">
                               <div class="card-body pb-0">
-                                <h4 class="card-title card-title-dash text-white mb-4">Estado de Solar Tracker:</h4>
+                                <h4 class="card-title card-title-dash text-white mb-4">Última lectura</h4>
                                 <div class="row">
-                                  <div class="col-sm-8">
-                                    <!--<p class="status-summary-ight-white mb-1">Voltaje</p>-->
-                                    <h2 class="text-danger">Desonectado</h2>
+                                  <div class="col-sm-4">
+                                    <p class="status-summary-ight-white mb-1">Voltaje</p>
+                                    <h2 class="text-info">{{ultima_lectura}}</h2>
                                   </div>
-                                  <!--<div class="col-sm-8">
+                                  <div class="col-sm-8">
                                     <div class="status-summary-chart-wrapper pb-4">
                                       <canvas id="status-summary"></canvas>
-                                    </div>
-                                  </div>-->
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <!--Tarjetas de valores medios y medianas-->
-                          <div class="col-md-6 col-lg-12 grid-margin stretch-card">
-                            <div class="card card-rounded">
-                              <div class="card-body">
-                                <div class="row">
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center mb-2 mb-sm-0">
-                                      <div class="circle-progress-width">
-                                        <div id="totalVisitors" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Voltaje promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_medicion|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                      <div class="circle-progress-width">
-                                        <div id="visitperday" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Intensidad promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_intensidad|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-lg-12 grid-margin stretch-card">
-                            <div class="card card-rounded">
-                              <div class="card-body">
-                                <div class="row">
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center mb-2 mb-sm-0">
-                                      <div class="circle-progress-width">
-                                        <div id="totalVisitors" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Voltaje promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_medicion|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                      <div class="circle-progress-width">
-                                        <div id="visitperday" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Intensidad promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_intensidad|floatformat:2}}</h4>
-                                      </div>
                                     </div>
                                   </div>
                                 </div>
