--- a/ProyectoApp/templates/ProyectoApp/template/live.html
+++ b/ProyectoApp/templates/ProyectoApp/template/live.html
@@ -180,27 +180,6 @@
               <div class="home-tab">
                 <div class="tab-content tab-content-basic">
                   <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview"> 
-                    <div class="row">
-                      <div class="col-sm-12">
-                        <div class="statistics-details d-flex align-items-center justify-content-between" style="margin-bottom: 0%;">
-                          <div>
-                            <p class="statistics-title">Última actualización</p>
-                            <h3 class="rate-percentage">{{ultima_lectura}} Voltios</h3>
-                            <p class="text-success d-flex"><i class="mdi mdi-menu-up"></i><span>{{ultima_hora.date}}</span></p>
-                          </div>
-                          <div>
-                            <p class="statistics-title">Hora del servidor</p>
-                            <h3 class="rate-percentage" id="HoraActual"></h3>
-                            <p class="text-center d-flex"><span>{{fecha}}</span></p>
-                          </div>
-                          <div>
-                            <p class="statistics-title">Tiempo de sesión</p>
-                            <h3 class="rate-percentage" id="timespent" ></h3>
-                            <p class="text"><span id="iniciosesion"></span></p>
-                          </div>
-                        </div>
-                      </div>
-                    </div> 
 
                     <!--Estado de solar Tracker-->
                     <!--<div class="row">
@@ -223,9 +202,9 @@
                               <div class="card-body">
                                 <div class="d-sm-flex justify-content-between align-items-start">
                                   <div>
-                                   <h4 class="card-title card-title-dash">Resumen diario</h4>
-                                   <h5 class="card-subtitle card-subtitle-dash">Historial de las últimas lecturas de voltaje</h5>
-                                   <img src="{{imagen}}" width="100%">
+                                   <h4 class="card-title card-title-dash">Stream</h4>
+                                   <h5 class="card-subtitle card-subtitle-dash">Visualización de los datos en tiempo real</h5>
+                                   <img src="{{imagen}}" height="100%" width="100%">
                                   </div>
                                   <!--<div id="performance-line-legend"></div>-->
                                 </div>
@@ -246,7 +225,11 @@
                                 <div class="row">
                                   <div class="col-sm-8">
                                     <!--<p class="status-summary-ight-white mb-1">Voltaje</p>-->
+                                    {% if media_voltaje > 0%}
+                                    <h2 class="text-success">Conectado</h2>
+                                    {% else %}
                                     <h2 class="text-danger">Desonectado</h2>
+                                    {% endif %}
                                   </div>
                                   <!--<div class="col-sm-8">
                                     <div class="status-summary-chart-wrapper pb-4">
@@ -269,67 +252,7 @@
                                       </div>
                                       <div>
                                         <p class="text-small mb-2">Voltaje promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_medicion|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                      <div class="circle-progress-width">
-                                        <div id="visitperday" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Intensidad promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_intensidad|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-lg-12 grid-margin stretch-card">
-                            <div class="card card-rounded">
-                              <div class="card-body">
-                                <div class="row">
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center mb-2 mb-sm-0">
-                                      <div class="circle-progress-width">
-                                        <div id="totalVisitors" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Voltaje promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_medicion|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                      <div class="circle-progress-width">
-                                        <div id="visitperday" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Intensidad promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_intensidad|floatformat:2}}</h4>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-md-6 col-lg-12 grid-margin stretch-card">
-                            <div class="card card-rounded">
-                              <div class="card-body">
-                                <div class="row">
-                                  <div class="col-sm-6">
-                                    <div class="d-flex justify-content-between align-items-center mb-2 mb-sm-0">
-                                      <div class="circle-progress-width">
-                                        <div id="totalVisitors" class="progressbar-js-circle pr-2"></div>
-                                      </div>
-                                      <div>
-                                        <p class="text-small mb-2">Voltaje promedio</p>
-                                        <h4 class="mb-0 fw-bold">{{media_medicion|floatformat:2}}</h4>
+                                        <h4 class="mb-0 fw-bold">{{media_voltaje|floatformat:2}}</h4>
                                       </div>
                                     </div>
                                   </div>
@@ -443,6 +366,16 @@
     ///////////////////////Tiempo de sesion///////////////////////////////
     //////////////////////////////////////////////////////////////////////
 
+  </script>
+
+  <!--Actulizar automaticamente pagina cada 5 segundos-->
+  <script type="text/javascript">
+    // Función actualizar
+    function actualizar(){
+        location.reload(true)
+    }
+    // Función para actualizar cada 4 segundos(4000 milisegundos)
+    setInterval("actualizar()",3000);
   </script>
 
 </body>
