finalizacion de proyecto con db en amazon

--- a/ProyectoApp/templates/ProyectoApp/template/history.html
+++ b/ProyectoApp/templates/ProyectoApp/template/history.html
@@ -40,10 +40,10 @@
           </button>
         </div>
         <div>
-          <a class="navbar-brand brand-logo" href="index.html">
+          <a class="navbar-brand brand-logo" href="{% url 'Home' %}">
             <img src="{% static 'ProyectoApp/images/logo.svg'%}" alt="logo" />
           </a>
-          <a class="navbar-brand brand-logo-mini" href="index.html">
+          <a class="navbar-brand brand-logo-mini" href="{% url 'Home' %}">
             <img src="{% static 'ProyectoApp/images/logo-mini.svg'%}" alt="logo" />
           </a>
         </div>
