--- a/ProyectoApp/templates/ProyectoApp/template/live.html
+++ b/ProyectoApp/templates/ProyectoApp/template/live.html
@@ -40,10 +40,10 @@
           </button>
         </div>
         <div>
-          <a class="navbar-brand brand-logo" href="index.html">
+          <a class="navbar-brand brand-logo" href="{% url 'Home' %}">
             <img src="{% static 'ProyectoApp/images/logo.svg'%}" alt="logo" />
           </a>
-          <a class="navbar-brand brand-logo-mini" href="index.html">
+          <a class="navbar-brand brand-logo-mini" href="{% url 'Home' %}">
             <img src="{% static 'ProyectoApp/images/logo-mini.svg'%}" alt="logo" />
           </a>
         </div>
@@ -108,7 +108,7 @@
         <div id="settings-trigger"><i class="ti-settings"></i></div>
         <div id="theme-settings" class="settings-panel">
           <i class="settings-close ti-close"></i>
-          <p class="settings-heading">Confiuración de barra lateral</p>
+          <p class="settings-heading">Configuración de barra lateral</p>
           <div class="sidebar-bg-options selected" id="sidebar-light-theme"><div class="img-ss rounded-circle bg-light border me-3"></div>Light</div>
           <div class="sidebar-bg-options" id="sidebar-dark-theme"><div class="img-ss rounded-circle bg-dark border me-3"></div>Dark</div>
           <p class="settings-heading mt-2">Configuración de header</p>
@@ -225,7 +225,7 @@
                                 <div class="row">
                                   <div class="col-sm-8">
                                     <!--<p class="status-summary-ight-white mb-1">Voltaje</p>-->
-                                    {% if media_voltaje > 0%}
+                                    {% if media_voltajelive > 0%}
                                     <h2 class="text-success">Conectado</h2>
                                     {% else %}
                                     <h2 class="text-danger">Desonectado</h2>
