--- a/ProyectoApp/templates/ProyectoApp/template/info.html
+++ b/ProyectoApp/templates/ProyectoApp/template/info.html
@@ -161,12 +161,12 @@
             </a>
           </li>
 
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="{% url 'Info' %}">
               <i class="menu-icon mdi mdi-information"></i>
               <span class="menu-title">Información</span>
             </a>
-          </li>
+          </li>-->
           
         </ul>
       </nav>
