eliminacion de lineas comentadas

--- a/ProyectoApp/templates/ProyectoApp/template/history2.html
+++ b/ProyectoApp/templates/ProyectoApp/template/history2.html
@@ -41,10 +41,10 @@
         </div>
         <div>
           <a class="navbar-brand brand-logo" href="{% url 'Home' %}">
-            <img src="{% static 'ProyectoApp/images/logo.svg'%}" alt="logo" />
+            <img src="{% static 'ProyectoApp/images/logo.svg'%}" alt="logo" style="height: 100%;"/>
           </a>
           <a class="navbar-brand brand-logo-mini" href="{% url 'Home' %}">
-            <img src="{% static 'ProyectoApp/images/logo-mini.svg'%}" alt="logo" />
+            <img src="{% static 'ProyectoApp/images/logo-mini.svg'%}" alt="logo" style="height: 100%;"/>
           </a>
         </div>
       </div>
@@ -72,26 +72,6 @@
             </div>
           </li>
           <!--Fin calendario-->
-
-          <!--Fotografia usario-->
-          <!--<li class="nav-item dropdown d-none d-lg-block user-dropdown">
-            <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-              <img class="img-xs rounded-circle" src="{% static 'ProyectoApp/images/faces/face8.jpg' %}" alt="Profile image"> </a>
-            <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
-              <div class="dropdown-header text-center">
-                <img class="img-md rounded-circle" src="{% static 'ProyectoApp/images/faces/face8.jpg' %}" alt="Profile image">
-                <p class="mb-1 mt-3 font-weight-semibold">{{username}}</p>
-                <p class="fw-light text-muted mb-0">allenmoreno@gmail.com</p>
-              </div>
-              <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i> My Profile <span class="badge badge-pill badge-danger">1</span></a>
-              <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i> Messages</a>
-              <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Activity</a>
-              <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
-              <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
-            </div>
-          </li>-->
-          <!--Fin fotografia usario-->
-
         </ul>
 
         <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
@@ -189,8 +169,8 @@
                   </ul>
                   <div>
                     <div class="btn-wrapper">
-                      <a href="#" class="btn btn-otline-dark align-items-center"><i class="icon-share"></i> Share</a>
-                      <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i> Print</a>
+                      <!--<a href="#" class="btn btn-otline-dark align-items-center"><i class="icon-share"></i> Share</a>-->
+                      <!--<a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i> Print</a>-->
                       <a href="#" class="btn btn-primary text-white me-0"><i class="icon-download"></i> Export</a>
                     </div>
                   </div>
